5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1601_1801.log
== TEST (2019-04-03 18:37:42) 
-- CODE:
a = input("digite uma palavra para o feitico")
b = int(input("digite um numero para o feitico"))
c = "Abra "
palavra = c + a + " "
feitico = b * palavra
print(feitco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(feitco)
NameError: name 'feitco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:38:38) 
-- CODE:
a = input("digite uma palavra para o feitico")
b = int(input("digite um numero para o feitico"))
c = "Abra "
palavra = c + a + " "
feitico = b * palavra
print(feitco

-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:38:49) 
-- CODE:
a = input("digite uma palavra para o feitico")
b = int(input("digite um numero para o feitico"))
c = "Abra "
palavra = c + a + " "
feitico = b * palavra
print(feitco)


-- EXECUTION TIME:
0.185713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 6, in <module>
    print(feitco)
NameError: name 'feitco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:38:52) 
-- CODE:
a = input("digite uma palavra para o feitico")
b = int(input("digite um numero para o feitico"))
c = "Abra "
palavra = c + a + " "
feitico = b * palavra
print(feitco)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(feitco)
NameError: name 'feitco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:39:42) 
-- CODE:
a = input("digite uma palavra para o feitico")
b = int(input("digite um numero para o feitico"))
c = "Abra "
palavra = c + a + " "
feitico = b * palavra
print(feitico)


-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:40:03) 
-- CODE:
a = input("digite uma palavra para o feitico")
b = int(input("digite um numero para o feitico"))
c = "Abra "
palavra = c + a + " "
feitico = b * palavra
print(feitico)


-- EXECUTION TIME:
0.146885
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
